cabal-version:      2.4
name:               intuitRIL
version:            0.1.0.0
synopsis:           SAT-based therorem prover for Intermediate Propositional Logics

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Camillo Fiorentini
maintainer:         fiorentini@di.unimi.it

-- A copyright notice.
-- copyright:
category:           Theorem Prover
extra-source-files:
    CHANGELOG.md
    README.md

executable intuitRIL
    main-is:           IntuitRIL.hs

    -- Modules included in this executable, other than Main.
    other-modules: Clausify,
                   Language,
                   Model,
                   ParserTPTP,
                   Prover,
                   ProverTypes,
                   Utility,
                   WriteLatex,
                   WriteMakeFile,
                   WriteModelGraphviz,
                   ------    IMPLEMENTED LOGICS -----
                   BoundedDepth,
                   Dummett,
                   DummettBoundedDepth,
                   Jankov,
                   Kp

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      -- base ^>=4.12.0.0,
                      minisat,
                      partial-order,
                      containers,
                      mtl,
                      raw-strings-qq,
                      filepath,
                      directory,
                      parsec
    -- Directories containing source files.  
    hs-source-dirs:   src
    -- Base language which the package is written in.
    default-language: Haskell2010
